# Allify

./: .env  404.html  ALLIFY.code-workspace  Database_Setup.sql  README.md  README1.md  add_birthday_column.sql  allify_schema.sql  birthday.html  birthday.js  confirm_signup-template.html  email.html  email.js  email_template_reset.html  home.html  home.js  index.html  manifest.webmanifest  package-lock.json  package.json  password-reset-template.html  password.html  password.js  project_roadmap.md  registerSW.js  script.js  signin.html  signin.js  styles.css  supabase.js  supabase_allies_system.sql  supabase_birthday_migration.sql  supabase_comments_refactor.sql  supabase_corrected.sql  supabase_favorites_setup.sql  supabase_fix_duplicate_conversations.sql  supabase_likes_optimization.sql  supabase_likes_refactor.sql  supabase_media_sync.sql  supabase_message_reactions.sql  (+18 more)
assets/: index---CTe3s6.js  index-5QsUqkGe.css  index-6WpzTNtE.js  index-8x06TQ9x.js  index-AysaTIl_.css  index-B6WxkoKY.css  index-B8LJuYhW.css  index-B8PPFaVe.js  index-BA8EHL9l.js  index-BEHjPMzm.js  index-BGJZgp5x.js  index-BJ76t9Hb.js  index-BLMYHJbr.js  index-BQwEaPxP.css  index-BT2i3pjp.js  index-BTbJvkvY.js  index-BUuUMgS2.js  index-BVj5aZCo.js  index-BZiZKr4q.js  index-Bf0SeUNA.js  index-BiVYYI94.css  index-BlaEeR5m.js  index-Boeleu4V.js  index-BuJMHmem.js  index-Bv_X0HKt.js  index-By-KaTQ1.css  index-Bzvaeh_H.js  index-C3RoQnlQ.js  index-C6y5-1pt.css  index-CBX4pPc1.js  index-CDFwuwst.js  index-CDWsQmlL.js  index-CDxeyL6-.js  index-CE0PBbIb.css  (+67 more)
backend/: Cargo.toml
backend/src/: main.rs
(+98 files in other folders)
